SAK-17543 prep for indie release.
git-svn-id: https://source.sakaiproject.org/svn/sakai-mock/trunk@69651 66ffb92e-73f9-0310-93c1-f5514f145a0a